fix: tweak styles to acommodate more demos on mobile

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -135,7 +135,7 @@ code a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  padding: 14px 12vw;
+  padding: 14px 9vw;
   background-color: #eaeaea;
 
   flex-basis: auto;
